Fix: port to Forge 1.20.1 and enable CI build
- Port remaining NeoForge 1.21.1 APIs to Forge 1.20.1 (NBT, recipes, blocks, rendering)
- Add JsonUtil and fix recipe serializers to 1.20.1 fromJson/fromNetwork/toNetwork
- Rewrite access transformer with SRG field names
- Rename generated data dirs to 1.20.1 conventions (recipes/advancements/loot_tables)
- Replace neoforge:conditions with forge:conditions
- Remove datagen and optional JEI/Jade integrations to make the build compile
- Fix GitHub Actions workflows (Java 17, gradle wrapper 8.9)
- Build verified: ./gradlew build succeeds (ftbstuff-1.0.0.jar)